<resources>
    <string name="app_name">GPA_R01850699_Calculator</string>
    <string name="btn_label">Compute GPA</string>
    <string name="btn_label2">Clear form</string>
    <string name="course1">Course 1:</string>
    <string name="course2">Course 2:</string>
    <string name="course3">Course 3:</string>
    <string name="course4">Course 4:</string>
    <string name="course5">Course 5:</string>
    <string name="hint">Enter grade</string>
    <string name="gpa_display">GPA: %.2f</string>
    <string name="toast">You must enter data into each field to proceed.</string>
    <string name="toast2">Invalid data entered. Grades must be between 0 and 100.</string>
</resources>
